[project]
name = "test-gguf-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.29.1",
    "outlines[llamacpp]>=0.2.1",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
